@@ -150,7 +150,11 @@ int RemoteClient::GetDefaultPort()
             if (in_file)
             {
                 Json::Value config;
-                in_file >> config;
+                try {
+                    in_file >> config;
+                } catch (const std::exception & e) {
+                    std::cerr << "Error reading remote server config file: " << filename << ": " << e.what() << std::endl;
+                }
                 in_file.close();
                 if (config.isMember("port")) {
                     port = config["port"].asInt();
